ownership/tests/will_not_compile/loose_ownership_to_function.stderr
error[E0382]: borrow of moved value: `a`
  --> tests/will_not_compile/loose_ownership_to_function.rs:10:45
   |
4  |     let a = String::from("I am a string");
   |         - move occurs because `a` has type `String`, which does not implement the `Copy` trait
5  |     let a_len = get_string_len(a);
   |                                - value moved here
...
10 |     println!("the string {} has lenght {}", a, a_len);
   |                                             ^ value borrowed here after move
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider cloning the value if the performance cost is acceptable
   |
5  |     let a_len = get_string_len(a.clone());
   |                                 ++++++++
